<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/capture_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <SurfaceView
        android:id="@+id/capture_preview_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center" />

    <scanner.view.ViewfinderView
        android:id="@+id/capture_viewfinder_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@android:color/transparent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bg" >

        <TextView
            android:id="@+id/capture_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:drawableLeft="@mipmap/png_changepsd_icon_back"
            android:drawableStart="@mipmap/png_changepsd_icon_back"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:minWidth="48dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/last"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choosemode_mode_qr"
            android:textColor="@color/white"
            android:textSize="@dimen/title_textsize" />
    </FrameLayout>
	
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_qrcode"
                android:textColor="@color/white"
                android:textSize="14sp"/>
            <TextView 
                android:id="@+id/capture_flashlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/open_or_close_light"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>
</FrameLayout>