<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/title_bg" >

        <TextView
            android:id="@+id/photomessage_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:drawableLeft="@mipmap/png_changepsd_icon_back"
            android:drawableStart="@mipmap/png_changepsd_icon_back"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:minWidth="48dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/last"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/photomessage_title"
            android:textColor="@color/white"
            android:textSize="@dimen/title_textsize" />
        
        <TextView
            android:id="@+id/photomessage_tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical|end"
            android:minWidth="48dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/devicelist_edit"
            android:textColor="@drawable/font_color_white"
            android:textSize="16sp" />
    </FrameLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
    	android:background="@color/page_content_bg"
        android:layout_weight="10" >
        
		<ListView
		    android:id="@+id/photo_list"
		    android:layout_width="fill_parent"
		    android:layout_height="match_parent"
		    android:cacheColorHint="#00000000"
		    android:divider="#00000000"
		    android:background="@android:color/transparent"
		    android:listSelector="#00000000" />
		
		<RelativeLayout
            android:id="@+id/photomessage_layout_console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp"
            android:paddingEnd="15dp"
    		android:minHeight="48dp"
            android:visibility="gone"
            android:background="@color/white"
            android:layout_alignParentBottom="true" >
            
            <TextView
                android:id="@+id/photomessage_tv_deleall"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
	            android:layout_centerVertical="true"
	            android:gravity="center"
                android:text="@string/devicelist_deleall"
                android:textColor="@color/devicelist_tv_color"
            	android:textSize="16sp" />
            
            <TextView
                android:id="@+id/photomessage_tv_deleselected"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
	            android:layout_centerVertical="true"
	            android:gravity="center"
                android:text="@string/devicelist_deleteselected"
                android:textColor="@color/devicelist_tv_color"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
            	android:textSize="16sp" />
        </RelativeLayout>
	</RelativeLayout>
</LinearLayout>
