<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:background="@color/title_bg"
		android:focusable="true"
		android:focusableInTouchMode="true" >

		<TextView
			android:id="@+id/qrinfo_tv_back"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_gravity="start"
			android:drawableLeft="@mipmap/png_changepsd_icon_back"
			android:drawableStart="@mipmap/png_changepsd_icon_back"
			android:drawablePadding="3dp"
			android:gravity="center_vertical"
			android:minWidth="48dp"
			android:paddingLeft="10dp"
			android:paddingStart="10dp"
			android:text="@string/last"
			android:textColor="@color/white"
			android:textSize="16sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/qrinfo_title"
			android:textColor="@color/white"
			android:textSize="@dimen/title_textsize" />

		<TextView
			android:id="@+id/qrinfo_tv_generate"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_gravity="end"
			android:gravity="center_vertical|end"
			android:minWidth="48dp"
			android:paddingEnd="10dp"
			android:paddingRight="10dp"
			android:text=""
			android:textColor="@color/white"
			android:textSize="16sp" />
	</FrameLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_gravity="center"
		android:background="@color/page_content_bg"
		android:layout_weight="10" >

		<LinearLayout
			android:id="@+id/qrinfo_layout_info"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:paddingTop="20dp" >

			<RelativeLayout
				android:id="@+id/qrinfo_layout_endtime"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="1px"
				android:background="@color/white"
				android:paddingBottom="10dp"
				android:paddingTop="10dp">

				<TextView
					android:id="@+id/setting_tv_devnote"
					android:layout_width="90dp"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
					android:layout_marginLeft="15dp"
					android:layout_marginStart="15dp"
					android:text="@string/qrinfo_endtime"
					android:textColor="@color/doorbell_title"
					android:textSize="16sp" />

				<View
					android:id="@+id/setting_view_devnote"
					android:layout_width="1dip"
					android:layout_height="20dip"
					android:layout_centerVertical="true"
					android:layout_gravity="center_horizontal"
					android:layout_marginLeft="2dp"
					android:layout_marginRight="2dp"
					android:layout_toRightOf="@+id/setting_tv_devnote"
					android:background="@color/page_content_bg" />

				<TextView
					android:id="@+id/qrinfo_tv_endtime"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_marginRight="15dp"
					android:gravity="center"
					android:text=""
					android:textColor="@color/black"
					android:textSize="16sp" />
			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/qrinfo_layout_unlockcount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp"
				android:layout_marginTop="1px"
				android:background="@color/white"
				android:paddingBottom="10dp"
				android:paddingTop="10dp">

				<TextView
					android:id="@+id/setting_tv_devid"
					android:layout_width="90dp"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
					android:layout_marginLeft="15dp"
					android:layout_marginStart="15dp"
					android:text="@string/qrinfo_unlockcount"
					android:textColor="@color/doorbell_title"
					android:textSize="16sp" />

				<View
					android:id="@+id/setting_view_devid"
					android:layout_width="1dip"
					android:layout_height="20dip"
					android:layout_centerVertical="true"
					android:layout_gravity="center_horizontal"
					android:layout_marginLeft="2dp"
					android:layout_marginRight="2dp"
					android:layout_toRightOf="@+id/setting_tv_devid"
					android:background="@color/page_content_bg" />

				<com.dpower.cintercom.widget.RegionNumberEditText
					android:id="@+id/qrinfo_edt_unlockcount"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_marginRight="15dp"
					android:background="@color/alpha"
					android:gravity="center|right"
					android:hint="1~10"
					android:maxLength="2"
					android:text=""
					android:textColor="@color/black"
					android:textSize="16sp" />
			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/setting_layout_history"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/white"
				android:paddingBottom="10dp"
				android:paddingTop="10dp"
				android:visibility="gone">

				<TextView
					android:id="@+id/setting_tv_history"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginLeft="15dp"
					android:layout_marginStart="15dp"
					android:gravity="center_vertical"
					android:text="@string/history_title"
					android:textColor="@color/doorbell_title"
					android:textSize="16sp" />

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:background="@mipmap/png_next" />
			</RelativeLayout>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/qrinfo_layout_qrcode"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:gravity="center"
			android:visibility="gone" >

			<ImageView
				android:id="@+id/qrinfo_iv_qr"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="-40dip"
				android:layout_gravity="center" />

			<Button
				android:id="@+id/qrinfo_btn_saved"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dip"
				android:paddingLeft="20dip"
				android:paddingRight="20dip"
				android:text="@string/qrinfo_qr_saved"
				android:textColor="@color/white"
				android:textSize="16sp"
				android:background="@drawable/login_confirm" />

			<Button
				android:id="@+id/qrinfo_btn_share"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dip"
				android:paddingLeft="20dip"
				android:paddingRight="20dip"
				android:text="@string/qrinfo_qr_share"
				android:textColor="@color/white"
				android:textSize="16sp"
				android:background="@drawable/login_confirm" />
		</LinearLayout>
	</FrameLayout>
</LinearLayout>

