<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/title_bg" >

        <TextView
            android:id="@+id/choosemode_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:drawableLeft="@mipmap/png_changepsd_icon_back"
            android:drawableStart="@mipmap/png_changepsd_icon_back"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:minWidth="48dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/last"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choosemode_title"
            android:textColor="@color/white"
            android:textSize="@dimen/title_textsize" />
    </FrameLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
    	android:background="@color/page_content_bg"
        android:layout_weight="10" >
        
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
		    
		    <RelativeLayout
		        android:id="@+id/choosemode_layout_qr"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/white"
		        android:layout_marginTop="20dp"
		        android:paddingTop="10dp"
		        android:paddingBottom="10dp" >
		        
		        <TextView
		            android:id="@+id/choosemode_tv_qr"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginStart="15dp"
		            android:layout_marginLeft="15dp"
		            android:text="@string/choosemode_mode_qr"
		            android:textColor="@color/doorbell_title"
		            android:textSize="16sp"
		            android:layout_centerVertical="true"
		            android:gravity="center_vertical" />
		        
				<ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:background="@mipmap/png_next" />
		    </RelativeLayout>
		</LinearLayout>
	</FrameLayout>
</LinearLayout>
